included images and completed info section css

--- a/index.html
+++ b/index.html
@@ -21,24 +21,35 @@
 
 			</ul>
 		</header>
+
 		<div class ="intro">
 			<div class="container">
 			<h2>This website is Awesome </h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vulputate volutpat turpis, sit amet hendrerit est ultrices quis. </p>
 			<button> Sign up </button>
 		</div>
-			<img src ="/" alt="this is placeholder for an image">
+			<img src ="./image2.jpg" alt="this is placeholder for an image">
 		</div>
+
+
+		<h3> Some Random information</h3>
 		<div class="info">
-			<h3> Some Random information</h3>
-            <img src ="/" >
-            <p>This is some random text</p>
-			<img src ="/" alt="this is placeholder for an image">
-			<p>This is some random text</p>
-			<img src ="/" alt="this is placeholder for an image" >
-			<p>This is some random text</p>
-			<img src ="/" alt="this is placeholder for an image" >
-			<p>This is some random text</p>
+		<div class="text">
+            <img src ="./image1.jpg" >
+            <p>This is some random text with a random image</p>
+        </div>
+        <div class="text">
+			<img src ="./image2.jpg" >
+			<p>This is some random text with a random image</p>
+		</div>
+		<div class="text">
+			<img src ="./image3.jpg"  >
+			<p>This is some random text with a random image</p>
+		</div>
+		<div class="text"> 
+			<img src ="./image4.jpg" >
+			<p>This is some random text with a random image</p>
+		</div>
 
 		</div>
 		<div class="quote">
