Edit index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang ="en">
 	<head>
 	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-	</style>
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+</style>
 		<meta charset ="utf-8">
 		<meta name ="viewport" content ="width=device-width, initial scale =1.0">
         <link rel = "stylesheet" href ="styles.css">
@@ -53,9 +53,18 @@
 
 		</div>
 		<div class="quote">
-			<p> A man is what he thinks about all day long</p>
-			<p> -Ralph Waldo Emerson</p>
+			<p class="quotext"> A man is what he thinks about all day long</p>
+			<p class="quotertext"> -Ralph Waldo Emerson</p>
 		</div>
+
+			<div class = "signup">
+				<div>
+			<p class="headtext"> Call to action! It's time!</p>
+			<p class ="smalltext">Sign up for our product by clicking the button right over there.</p>
+		</div>
+			<button> Sign up</button>
+            </div>
+		
 		<div class="footer">
 			<p> Copyright &#169; by AQL for TheOdinProject</p>
 		</div>
